# CyberRange

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
cyberrange/: __init__.py  __main__.py  cli.py  mcp_server.py
cyberrange/core/: config.py  discovery.py  docker_client.py  manager.py  models.py  ports.py  stats.py
pentest/: README.md
pentest/cfs/: README.md  cfs-manage.ps1  docker-compose.yml
webshell-test/: .gitignore  README.md  Vagrantfile  docker-compose.yml  windows-setup.ps1
webshell-test/html/: index.php
webshell-test/tomcat-webapps/ROOT/: index.jsp
webshell-test/webshell/: README.md  api.jsp  api.php  behinder_3.0_default.jsp  behinder_3.0_default.php  index.html
