[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberrange"
version = "0.1.0"
description = "CyberRange management CLI and MCP server for AI agent automation"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.0",
    "mcp[cli]>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
cyberrange = "cyberrange.cli:app"

[tool.setuptools.packages.find]
include = ["cyberrange*"]
